--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         <dic class="row flex-row wrap">
             <div class="bucket img1 center">다이어트 성공하기</div>
             <div class="bucket img2 center">목돈 모으기!</div>
-            <div class="bucket img2 center">나만의 창업자리 잡기</div>
+            <div class="bucket img2 center done">나만의 창업자리 잡기</div>
             <div class="bucket img1 center">한달에 2번씩 독서하기</div>
-            <div class="bucket img1 center">주 1회 블로그 작성하기</div>
+            <div class="bucket img1 center done">주 1회 블로그 작성하기</div>
             <div class="bucket img1 center">가계부 쓰며 불필요한 소비줄이기</div>
             <div class="bucket img1 center">긍정적인 마인드갖기</div>
             <div class="bucket img2 center">가족들과 여행 많이다니기</div>
